@@ -3,6 +3,8 @@ v0.4.0
  * Remove connection retries. Client will now fail fast if it fails to connect to the server
  * Reorder parameters to krpc.connect() so that name is first - to be consistent with other client libraries
  * Add support for RPCs to throw exceptions
+ * Add support for events
+ * Don't execute an initial RPC when a stream is created, wait for the first update instead.
 
 v0.3.8
  * Clean up code to meet PEP 8 guidelines
